@@ -1,3 +1,8 @@
+2015-02-28 Riccardo Mottola <rm@gnu.org>
+
+	* Source/NetBase.m
+	Cast to intptr_t to avoid compiler warnings (Yavor Doganov)
+
 2015-02-22 Riccardo Mottola <rm@gnu.org>
 
 	* Source/IRCObject.m (contains_a_space)
